# riow

./: .gitignore  Cargo.toml  README.md  image.ppm  image1.ppm  image2.ppm
.cargo/: config.toml
images/: image3.ppm
src/: libcamera.rs  libcolor.rs  libhittable.rs  libhittable_list.rs  libmaterial.rs  libray.rs  libsphere.rs  libvec.rs  main.rs  vec.rs
