[package]
name = "riow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
mimalloc = { version = "0.1.17", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"